--- a/README
+++ b/README
@@ -1,6 +1,9 @@
 Gede
 ----
 
+Gede was written by Johan Henriksson.
+Copyright (C) 2014.
+
 The Gede sourcecode is licensed under the terms of the BSD license.
 
 The icons used are from the NetBeans project and licensed under the
