doc: updated readme

--- a/README
+++ b/README
@@ -10,4 +10,13 @@ The icons used are from the NetBeans project and licensed under the
 terms of the NetBeans License Agreement.
 
 
+ctags
+=====
+
+Gede uses ctags.
+
+To install it on Debian:
+
+    # apt-get install exuberant-ctags
+
 
