--- a/README
+++ b/README
@@ -2,9 +2,7 @@ Gede
 ----
 
 Gede was written by Johan Henriksson.
-Copyright (C) 2014.
-
-The Gede sourcecode is licensed under the terms of the BSD license.
+Seé LICENSE file for license information.
 
 The icons used are from the NetBeans project and licensed under the
 terms of the NetBeans License Agreement.
